[tool.poetry]
name = "dna_log_plotter"
version = "0.1.0"
description = ""
authors = ["Kirill Varlamov <kirill@ongrid.pro>"]

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.0.3"
pandas = "^1.0.4"
plotly = "^4.8.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
